--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="User"
+        android:text="Usuario"
         android:id="@+id/textView"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Pass"
+        android:text="Contraseña"
         android:id="@+id/textView2"
         android:layout_below="@+id/editText_user"
         android:layout_alignParentLeft="true"
@@ -59,7 +59,7 @@
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Save pass"
+        android:text="Guardar contraseña"
         android:id="@+id/checkBox_save"
         android:checked="false"
 
